###############################################################################
## NEWS to package MKdescr
###############################################################################

###########################################################
## Version 0.5
###########################################################
- minor modification of package description in DESCRIPTION and Rd file


###########################################################
## Version 0.4
###########################################################
- extended description in DESCRIPTION file
- improved documentation of CV and SNR


###########################################################
## Version 0.3
###########################################################
- slightly changed the title of the package and extended the description


###########################################################
## Version 0.2
###########################################################
- added functions skippedMean and skippedSD for computing Huber-type
  skipped mean and SD.


###########################################################
## Version 0.1
###########################################################
- Start of development
- Copied functions simCorVars, glog, glog10, glog2, inv.glog,
  inv.glog10, inv.glog2, scale_y_glog, scale_x_glog,
  scale_y_glog10, scale_x_glog10, scale_y_glog2,
  scale_x_glog2, scale_y_neglog, scale_x_neglog,
  scale_y_neglog10, scale_x_neglog10, scale_y_neglog2,
  scale_x_neglog2, melt.long, fiveNS, IQrange, sIQR,
  meanAD, CV, medCV, iqrCV, SNR, medSNR, iqrSNR,
  qbxp.stats, qboxplot, thyroid
  from package MKmisc