@@ -5,11 +5,15 @@
   The function simulates a pair of correlated variables.
 }
 \usage{
-simCorVars(n, r, plot = TRUE)
+simCorVars(n, r, mu1 = 0, mu2 = 0, sd1 = 1, sd2 = 1, plot = TRUE)
 }
 \arguments{
   \item{n}{ integer: sample size. }
   \item{r}{ numeric: correlation.}
+  \item{mu1}{ numeric: mean of first variable.}
+  \item{mu2}{ numeric: mean of second variable.}
+  \item{sd1}{ numeric: SD of first variable.}
+  \item{sd2}{ numeric: SD of second variable.}
   \item{plot}{logical: generate scatter plot of the variables.}
 }
 \details{
@@ -24,7 +28,15 @@ simCorVars(n, r, plot = TRUE)
 %\references{}
 \author{ Matthias Kohl \email{Matthias.Kohl@stamats.de}}
 \examples{
+set.seed(123)
 res <- simCorVars(n = 100, r = 0.8)
 cor(res$Var1, res$Var2)
+colMeans(res)
+apply(res, 2, sd)
+set.seed(123)
+res <- simCorVars(n = 100, r = 0.8, mu1 = -1, mu2 = 1, sd1 = 2, sd2 = 0.5)
+cor(res$Var1, res$Var2)
+colMeans(res)
+apply(res, 2, sd)
 }
 \keyword{univar}
